release: prepare Rust-Java REST 4.2.0